index.html : added <link rel="shortcut icon" href="#"> to avoid error msg about favicon + added h-100 as class in <input id="searchbar"> and <div class="d-flex p-1 p-md-2 bg-white rounded-end h-100"> + added classes d-flex align-items-center h-100 in <button id="btn-searchbar"> + added <div id="alert-container" class="w-75 mt-1 mx-auto fw-bold"></div> for the msg if number of recipes is 0
style.css : updated form-heigh selector

filters.js : added "id" in const divDropdownAlert +
updated ms-auto in btnDropdown +
updated some comments +
updated some loops to use natives loops

index.js : removed some comments

listeners.js : refactoring +
updated some loops to use natives loops +
added some comments

recipes.js : refactoring +
updated some loops to use natives loops +
added some comments +
added functions containsTerm() and displayAlert() and updateTotRecipes()

utils.js : updated  to use natives loops

--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@
 }
 
 .form-height {
-    height: 3rem; /* hauteur de ligne par défault */
+    height: 2rem; /* hauteur de ligne par défault */
 }
 
 .fs-12 {
@@ -93,6 +93,9 @@
     }
     .mb {
         margin-bottom: 4rem;
+    }
+    .form-height {
+        height: 3rem;
     }
 }
 
